--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,8 +52,8 @@ javac.classpath=\
     ${file.reference.commons-dbcp2-2.13.0.jar}:\
     ${file.reference.commons-pool2-2.12.1.jar}:\
     ${file.reference.commons-logging-1.3.5.jar}:\
-    ${libs.TestFX.classpath}:\
     ${file.reference.antlr-2.7.7.jar}:\
+    ${libs.FXtest.classpath}:\
     ${file.reference.byte-buddy-1.12.22.jar}:\
     ${file.reference.hamcrest-junit-2.0.0.0.jar}:\
     ${file.reference.hibernate-core-5.6.15.Final.jar}:\
@@ -64,7 +64,8 @@ javac.classpath=\
     ${file.reference.jboss-logging-3.4.3.Final.jar}:\
     ${file.reference.javax.transaction-api-1.3.jar}:\
     ${file.reference.classmate-1.5.1.jar}:\
-    ${file.reference.hibernate-commons-annotations-5.1.2.Final.jar}
+    ${file.reference.hibernate-commons-annotations-5.1.2.Final.jar}:\
+    ${libs.junit_4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
