--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -53,8 +53,8 @@ javac.classpath=\
     ${file.reference.commons-pool2-2.12.1.jar}:\
     ${file.reference.commons-logging-1.3.5.jar}:\
     ${file.reference.antlr-2.7.7.jar}:\
-    ${libs.FXtest.classpath}:\
     ${file.reference.byte-buddy-1.12.22.jar}:\
+    ${libs.TestFX.classpath}:\
     ${file.reference.hamcrest-junit-2.0.0.0.jar}:\
     ${file.reference.hibernate-core-5.6.15.Final.jar}:\
     ${file.reference.hibernate-entitymanager-5.6.15.Final.jar}:\
