Ventana con la tabla zapatillas de admin

--- a/src/model/configClass.properties
+++ b/src/model/configClass.properties
@@ -1,5 +1,5 @@
 DB=crud
-Conn=jdbc:mysql://localhost:3306/crud?serverTimezone=Europe/Madrid&useSSL=false
+Conn=jdbc:mysql://localhost:3306/crud_kap?serverTimezone=Europe/Madrid&useSSL=false
 DBUser=root
-DBPass=abcd*1234
+DBPass=root
 Driver=com.mysql.jdbc.Driver
