--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,6 +51,8 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.FXtest.classpath}:\
     ${file.reference.antlr-2.7.7.jar}:\
     ${file.reference.byte-buddy-1.12.22.jar}:\
     ${file.reference.classmate-1.5.1.jar}:\
@@ -66,9 +68,7 @@ javac.classpath=\
     ${file.reference.javax.persistence-api-2.2.jar}:\
     ${file.reference.javax.transaction-api-1.3.jar}:\
     ${file.reference.jboss-logging-3.4.3.Final.jar}:\
-    ${file.reference.mysql-connector-java-8.0.15.jar}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.FXtest.classpath}
+    ${file.reference.mysql-connector-java-8.0.15.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
