--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,8 +52,8 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${libs.junit_4.classpath}:\
-    ${libs.FXtest.classpath}:\
     ${file.reference.antlr-2.7.7.jar}:\
+    ${libs.JavaFXTest.classpath}:\
     ${file.reference.byte-buddy-1.12.22.jar}:\
     ${file.reference.classmate-1.5.1.jar}:\
     ${file.reference.commons-dbcp2-2.13.0.jar}:\
