--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -51,10 +51,10 @@ jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${libs.junit_4.classpath}:\
     ${file.reference.antlr-2.7.7.jar}:\
-    ${libs.JavaFXTest.classpath}:\
+    ${libs.junit_4.classpath}:\
     ${file.reference.byte-buddy-1.12.22.jar}:\
+    ${libs.FXtest.classpath}:\
     ${file.reference.classmate-1.5.1.jar}:\
     ${file.reference.commons-dbcp2-2.13.0.jar}:\
     ${file.reference.commons-logging-1.3.5.jar}:\
