--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -54,8 +54,8 @@ javac.classpath=\
     ${file.reference.antlr-2.7.7.jar}:\
     ${libs.junit_4.classpath}:\
     ${file.reference.byte-buddy-1.12.22.jar}:\
-    ${libs.FXtest.classpath}:\
     ${file.reference.classmate-1.5.1.jar}:\
+    ${libs.TestFX.classpath}:\
     ${file.reference.commons-dbcp2-2.13.0.jar}:\
     ${file.reference.commons-logging-1.3.5.jar}:\
     ${file.reference.commons-pool2-2.12.1.jar}:\
