--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -55,7 +55,6 @@ javac.classpath=\
     ${libs.junit_4.classpath}:\
     ${file.reference.byte-buddy-1.12.22.jar}:\
     ${file.reference.classmate-1.5.1.jar}:\
-    ${libs.TestFX.classpath}:\
     ${file.reference.commons-dbcp2-2.13.0.jar}:\
     ${file.reference.commons-logging-1.3.5.jar}:\
     ${file.reference.commons-pool2-2.12.1.jar}:\
@@ -68,7 +67,8 @@ javac.classpath=\
     ${file.reference.javax.persistence-api-2.2.jar}:\
     ${file.reference.javax.transaction-api-1.3.jar}:\
     ${file.reference.jboss-logging-3.4.3.Final.jar}:\
-    ${file.reference.mysql-connector-java-8.0.15.jar}
+    ${file.reference.mysql-connector-java-8.0.15.jar}:\
+    ${libs.FXtest.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
