--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,7 +52,6 @@ jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
     ${file.reference.antlr-2.7.7.jar}:\
-    ${libs.junit_4.classpath}:\
     ${file.reference.byte-buddy-1.12.22.jar}:\
     ${file.reference.classmate-1.5.1.jar}:\
     ${file.reference.commons-dbcp2-2.13.0.jar}:\
@@ -68,7 +67,8 @@ javac.classpath=\
     ${file.reference.javax.transaction-api-1.3.jar}:\
     ${file.reference.jboss-logging-3.4.3.Final.jar}:\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
-    ${libs.FXtest.classpath}
+    ${libs.FXtest.classpath}:\
+    ${libs.junit_4.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
