--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -67,8 +67,8 @@ javac.classpath=\
     ${file.reference.javax.transaction-api-1.3.jar}:\
     ${file.reference.jboss-logging-3.4.3.Final.jar}:\
     ${file.reference.mysql-connector-java-8.0.15.jar}:\
-    ${libs.FXtest.classpath}:\
-    ${libs.junit_4.classpath}
+    ${libs.junit_4.classpath}:\
+    ${libs.FXtest.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
